<resources>
    <string name="app_name">SClean</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="belum_memiliki_akun_registrasi">Belum memiliki akun? Registrasi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="banner_image">Banner image</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="history_laundry">Riwayat Laundry</string>
    <string name="pilih_laundry_yang_diinginkan">Pilih Laundry yang diinginkan</string>
    <string name="laundry_title">Laundry A</string>
    <string name="selesai">Selesai</string>
    <string name="rp_22_000">Rp 22.000</string>
    <string name="tanggal_11_01_2021">Tanggal: 11/01/2021</string>
    <string name="laundry_image">Laundry image</string>
    <string name="laundry_address">Jl. Setapan No 8, Makassar, Tallo, Panampu, 90213</string>
    <string name="laundry_openingHours">Buka: 08.00 – 17.00</string>
    <string name="laundry_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vehicula placerat laoreet. Quisque auctor neque eget quam vestibulum pulvinar. Aliquam erat volutpat. Sed eu facilisis mauris. Sed libero neque, rutrum non est nec, eleifend sollicitudin leo. In eget felis a risus pharetra vulputate vel ac justo. Sed rutrum eget tortor nec tristique. Duis faucibus nibh ante, ullamcorper porta neque laoreet ut. Quisque nisi neque, interdum et luctus sit amet, egestas id felis. Donec semper ornare neque, eget blandit velit tristique euismod.</string>
    <string name="service_title">Layanan 1</string>
    <string name="estimation">(Estimasi 5 hari)</string>
    <string name="service_count">0</string>
    <string name="price_value">Rp 6000,-</string>
    <string name="lokasi_saya">Lokasi Saya</string>
    <string name="daftar_pesanan">Daftar Pesanan</string>
    <string name="ganti_alamat">Ganti alamat</string>
    <string name="_2_kg_x_rp_6000">2 Kg x Rp 6000,-</string>
    <string name="profile_name">Budi Jaya Kusuma</string>
    <string name="alamat">Alamat</string>
    <string name="keluar">Keluar</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="masukkan_nomor_hp">Masukkan Nomor HP</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="mohon_lengkapi_alamat_anda">Mohon lengkapi alamat anda</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="masukkan_alamat_lengkap">Masukkan Alamat Lengkap</string>
    <string name="kota">Kota</string>
    <string name="masukkan_kota">Masukkan Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="masukkan_kecamatan">Masukkan Kecamatan</string>
    <string name="masukkan_kelurahan">Masukkan Kelurahan</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="masukkan_kode_pos">Masukkan Kode Pos</string>
    <string name="keterangan_alamat">Keterangan Alamat</string>
    <string name="keterangan">Keterangan</string>
    <string name="lewati">Lewati</string>
    <string name="simpan">Simpan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="masukkan_ulang_password">Masukkan Ulang Password</string>
    <string name="sudah_memiliki_akun_masuk">Sudah memiliki akun? Masuk</string>
    <string name="estimasi_selesai">Estimasi Selesai</string>
    <string name="_5_hari">5 Hari</string>
    <string name="sub_total">Sub Total</string>
    <string name="rp_12_000">Rp 12.000,-</string>
    <string name="biaya_pengantaran">Biaya Pengantaran</string>
    <string name="rp_10_000">Rp 10.000,-</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="batalkan">Batalkan</string>
    <string name="registrasi">Registrasi</string>
    <string name="temukan">Temukan</string>
    <string name="beranda">Beranda</string>
    <string name="riwayat">Riwayat</string>
    <string name="akun">Akun</string>
    <string name="sclean_logo">SClean Logo</string>
    <string name="pesan">Pesan</string>
    <string name="terjadi_masalah">Terjadi masalah</string>
    <string name="laundry_si_dragon">Laundry Si Dragon</string>
    <string name="_4_5">4.5</string>
    <string name="_279_reviews">(279 reviews)</string>
    <string name="_09_00_21_00">09:00 – 21:00</string>
    <string name="budi_mail_com">budi@mail.com</string>
    <string name="_0858_2234_9923">0858–2234–9923</string>
    <string name="jl_diponegoro">Jl Diponegoro</string>
    <string name="cannot_empty">Tidak boleh kosong.</string>
    <string name="must_be_numeric">Harus berupa angka.</string>
    <string name="must_be_5_characters">Harus 5 karakter.</string>
    <string name="retry">RETRY</string>
    <string name="refresh_button">Refresh button</string>
    <string name="an_error_occured">Terjadi masalah.</string>
    <string name="no_service_selected">Tidak ada layanan terpilih.</string>
    <string name="total_harga">Total Harga</string>
    <string name="min">-</string>
    <string name="plus">+</string>
    <string name="welcome_back">Selamat datang kembali!</string>
    <string name="email_invalid">Email tidak valid.</string>
    <string name="please_recheck">Periksa kembali data Anda.</string>
    <string name="no_laundry_nearby">Tidak ada laundry di dekat sini.</string>
    <string name="no_order_history">Anda belum melakukan transaksi apapun.</string>
    <string name="address_not_valid">Alamat anda tidak valid.</string>
    <string name="minimum_5_characters">Minimal 5 karakter.</string>
    <string name="password_not_match">Password tidak cocok.</string>
    <string name="correct_your_address">Perbaiki alamat anda.</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun?</string>
    <string name="masuk">Masuk</string>
</resources>